--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -1,21 +1,19 @@
 ---
-title: "Simple document"
-output: html_document
+title: "Data Import"
+output: github_document
 ---
 
-I'm an R Markdown document! 
-
-# Section 1
-
-Here's a **code chunk** that samples from 
-a _normal distribution_:
-
-```{r}
-samp = rnorm(100)
-length(samp)
+```{r setup}
+library(tidyverse) #ggplot, readr, tibble
 ```
 
-# Section 2
+## Read in some data 
 
-I can take the mean of the sample, too!
-The mean is `r mean(samp)`.
+Read in the litters dataset.
+```{r}
+litters_df = read_csv("./data/FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df) #use janitor package里面的clean_names function
+```
+
+
+## Take a look at the data
