--- a/data_manuplation.Rmd
+++ b/data_manuplation.Rmd
@@ -101,3 +101,19 @@ arrange(litters_df, pups_born_alive, gd0_weight) #先以pups_born_alive，如果
 ```
 
 
+## `%>%`
+
+use the pipe operator instead
+```{r}
+litters_df = 
+  read_csv("./data/FAS_litters.csv") %>% 
+  janitor::clean_names() %>% 
+  select(-pups_survive) %>% 
+  mutate(wt_gain = gd18_weight -gd0_weight) %>% 
+  drop_na(gd0_weight)
+```
+
+
+
+
+
