--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -106,4 +106,32 @@ lotr_tidy =
 ```
 
 
+## Joining datasets
+
+Import the FAS datasets
+left hand match, 把litters_df(right hand)上的数据去match到pups_df(left hand)上
+
+```{r}
+#separate(), can separate a column in to two column。sep = 3 means separate from the third character
+pups_df = 
+  read_csv("./data/FAS_pups.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(sex = recode(sex, `1` = "male", `2` = "female"))
+
+litters_df = 
+  read_csv("./data/FAS_litters.csv")%>% 
+  janitor::clean_names() %>% 
+  relocate(litter_number) %>% 
+  separate(group, into = c("dose", "day_of_tx"), sep = 3)
+```
+
+Next up, time to join them!
+
+```{r}
+#arrange():Arrange rows by column values
+fas_df = 
+  left_join(pups_df,litters_df, by = "litter_number") %>% 
+  arrange(litter_number) %>% 
+  relocate(litter_number, dose, day_of_tx)
+```
 
